# scriptured-prayer

./: .gitignore  CHANGELOG.md  README.md  manage.py  package-lock.json  package.json  pyproject.toml
.github/: CONTRIBUTING.md  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  user-story-template.md  user_story.md
.github/workflows/: build.yaml  deploy.yaml
ansible/: deploy.yaml
cardbox/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
cardbox/management/commands/: load_cards.py
cardbox/migrations/: 0001_initial.py  0002_prayerdeck_prayerdeckusercard_usercategoryoptions_and_more.py  0002_prayerdeck_usercardprayedlog_usercategoryoptions_and_more.py  0002_usercardprayedlog_usercategoryoptions_and_more.py
cardbox/templates/cardbox/: demo.html  index.html  prayerdeck.html  (+6 more)
frontend/: .env.development  .env.production  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  swiper.css  utilities.ts
prayer_box/: asgi.py  settings.py  urls.py  wsgi.py
prayerapp/: admin.py  apps.py  dev_urls.py  forms.py  models.py  schema.py  serializers.py  translation.py  urls.py  views.py
prayerapp/migrations/: 0001_initial.py  0002_card_instruction_category_default_instruction_and_more.py  0002_category_inspiration_category_inspiration_en_and_more.py  0002_rename_text_card_description_and_more.py  0003_bibleversion_card_version_card_version_en_and_more.py  0003_card_instruction_en_card_instruction_es_and_more.py  0004_alter_card_instruction_alter_card_instruction_en_and_more.py  0004_remove_card_description_en_and_more.py  0005_alter_category_genre.py  0006_dailydeck.py
prayerapp/static/: styles.css
scriptured-prayer-components/: .env.development  .env.production  README.md  esbuild.mjs  index.html  package-lock.json  package.json  serve.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
scriptured-prayer-components/demo/: index.html
scriptured-prayer-components/public/: usercards.json  usercards8.json
scriptured-prayer-components/src/: App.tsx  index.css  index.jsx  index.tsx  main.tsx  styles.css  swiper.css  tailwind.config.ts  theme.js
scriptured_prayer/: .env.dist  asgi.py  dev_settings.py  dev_urls.py  settings.py  urls.py  wsgi.py
spa-prototype/: package-lock.json  package.json
spa-prototype/public/: usercards.json  usercards2.json  usercards8.json
spa-prototype/src/: App.tsx
(+167 files in other folders)
