[tool.poetry]
name = "scriptured-prayer"
version = "0.1.0"
description = "Follin's Digital Prayer Box for scripturedprayer.com"
authors = ["Robbie Nichols <nichols.robbie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
django-modeltranslation = "^0.18.11"
whitenoise = "^6.6.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
radon = "^6.0.1"

[tool.poetry.group.pygraphviz]
optional = true

[tool.poetry.group.pygraphviz.dependencies]
pygraphviz = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
