[tool.poetry]
name = "scriptured-prayer"
version = "0.1.0"
description = "Follin's Digital Prayer Box for scripturedprayer.com"
authors = ["Robbie Nichols <nichols.robbie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
whitenoise = "^6.6.0"
requests = "^2.31.0"
django-rest-framework = "^0.1.0"
django-filter = "^23.5"
django-cors-headers = "^4.3.1"
dj-rest-auth = "^5.0.2"
psycopg = "^3.1.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
drf-spectacular = "^0.27.1"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
radon = "^6.0.1"
python-semantic-release = "^9.1.1"

[tool.poetry.group.pygraphviz]
optional = true

[tool.poetry.group.pygraphviz.dependencies]
pygraphviz = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.semantic_release]
version_variable = [
    "scriptured_prayer/__init__.py:__version__",
    "pyproject.toml:version"
]